New Changes to cards. Able to add metric and split metric.

--- a/Automation/Content/Site.css
+++ b/Automation/Content/Site.css
@@ -168,7 +168,7 @@ textarea {
 .bargraph {
     min-width: 600px;
     /*min-height: 400px;*/
-    width: auto;
+    width: auto !important;
     height: auto !important;
     max-height: 100%;
 }
