--- a/Automation/Views/Shared/_SCOM.cshtml
+++ b/Automation/Views/Shared/_SCOM.cshtml
@@ -2,174 +2,46 @@
 
 <div class="sortable" id="sortable" >
     <div class="row">
-        <div class="cardpanel panel-inverse clearfix resizable-card ui-sortable">
-            <div class="panel-heading">
-                <div class="panel-heading-btn">
-                    <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus-circle"></i></a>
-                </div>
-                <h4 class="panel-title">SCOM New Alerts</h4>
-            </div>
-            <div class="panel-body">
-                <div id="SCOMNewLink" class="value">
-                    @if (ViewBag.SCOMNew != null)
-                    {
-                        string SCOMNew = ViewBag.SCOMNew.ToString();
-                    <p class="cardprimary-value p" data-toggle="modal" data-target="#SCOMNewModal">
-                        @ViewBag.SCOMNew
-                            <h2 class="text-center">New Alerts</h2>
-                    </p>
-                    }
-                </div>
-            </div>
-        </div>
-
-        <div class="cardpanel panel-inverse clearfix resizable-card ui-sortable">
-            <div class="panel-heading">
-                <div class="panel-heading-btn">
-                    <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus"></i></a>
-                </div>
-                <h4 class="panel-title">SCOM Critical</h4>
-            </div>
-            <div class="panel-body">
-                <div class="value" id="SCOMClusterLink">
-                    <div class="cardvalue">
-                        <p class="cardprimary-value" data-toggle="modal" data-target="#SCOMNewModal">
-                            @Model.Where(m => m.Cluster == true).Count().ToString()
-                            <h2 class="text-center">Total</h2>
-                        </p>
-                    </div>
-                    <div class="cardcomparison_wrapper clearfix">
-                        <div class="cardleft_comparison">
-                            <div class="cardvalue-left">
-                                <span class="fa-layers fa-fw fa-3x" style="background:lightgrey">
-                                    <i class="fas fa-exclamation-triangle" style="color: orange;"></i>
-                                    <span class="fa-layers-counter" style="background:black">@Model.Where(m => m.Cluster == true && m.HealthState == "Warning").ToList().Count().ToString()</span>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="cardright_comparison">
-                            <div class="cardvalue-right">
-                                <span class="fa-layers fa-fw fa-3x" style="background:lightgrey">
-                                    <i class="fas fa-exclamation-circle" style="color:red;"></i>
-                                    <span class="fa-layers-counter" style="background:black">@Model.Where(m => m.Cluster == true && m.HealthState == "Error").ToList().Count().ToString()</span>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="cardpanel panel-inverse clearfix resizable-card ui-sortable">
-            <div class="panel-heading">
-                <div class="panel-heading-btn">
-                    <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus"></i></a>
-                </div>
-                <h4 class="panel-title">DFS Replication Groups</h4>
-            </div>
-            <div class="panel-body">
-                <div class="value" id="SCOMRepGroup">
-                    <div class="cardvalue">
-                        <p class="cardprimary-value" data-toggle="modal" data-target="#SCOMNewModal">
-                            @Model.Where(m => m.RepGroup == true).Count().ToString()
-                            <h2 class="text-center">Total</h2>
-                        </p>
-                    </div>
-                    <div class="cardcomparison_wrapper clearfix">
-                        <div class="cardleft_comparison">
-                            <div class="cardvalue-left">
-                                <span class="fa-layers fa-fw fa-3x" style="background:lightgrey">
-                                    <i class="fas fa-exclamation-triangle" style="color: orange;"></i>
-                                    <span class="fa-layers-counter" style="background:black">@Model.Where(m => m.RepGroup == true && m.HealthState == "Warning").ToList().Count().ToString()</span>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="cardright_comparison">
-                            <div class="cardvalue-right">
-                                <span class="fa-layers fa-fw fa-3x" style="background:lightgrey">
-                                    <i class="fas fa-exclamation-circle" style="color:red;"></i>
-                                    <span class="fa-layers-counter" style="background:black">@Model.Where(m => m.RepGroup == true && m.HealthState == "Error").ToList().Count().ToString()</span>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="cardpanel panel-inverse clearfix resizable-card ui-sortable">
-            <div class="panel-heading">
-                <div class="panel-heading-btn">
-                    <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus"></i></a>
-                </div>
-                <h4 class="panel-title">SCOM New Alerts</h4>
-            </div>
-            <div class="panel-body">
-                <div id="SCOMNewLink" class="value">
-                    @if (ViewBag.SCOMNew != null)
-                    {
-                        string SCOMNew = ViewBag.SCOMNew.ToString();
-                            <p class="cardprimary-value" data-toggle="modal" data-target="#SCOMNewModal">
-                             @ViewBag.SCOMNew
-                            <h2 class="text-center">New Alerts</h2>
-                        </p>
-                        }
-                </div>
-            </div>
-        </div>
-        <div class="cardpanel panel-inverse clearfix resizable-card ui-sortable">
-            <div class="panel-heading">
-                <div class="panel-heading-btn">
-                    <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus"></i></a>
-                </div>
-                <h4 class="panel-title">SCOM New Alerts</h4>
-            </div>
-            <div class="panel-body">
-                <div id="SCOMNewLink" class="value">
-                    @if (ViewBag.SCOMNew != null)
-                    {
-                        string SCOMNew = ViewBag.SCOMNew.ToString();
-                    <p class="cardprimary-value" data-toggle="modal" data-target="#SCOMNewModal">
-                        @ViewBag.SCOMNew
-                        <h2 class="text-center">New Alerts</h2>
-                    </p>
-                    }
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 
     <script type="text/javascript">
 
-
-        $('.resizable-card').resizable({
-                ghost: true,
-                minWidth: 200,
-                minHeight: 255,
-                grid: [40, 40],
-            animate: true,
-            stop: function (event, ui) {
-                id = ui.element.attr('id')
-                var uiheight = $('#' + id).height();
-                var uiwidth = $('#' + id).width();
-                $.cookie(id + 'height', uiheight);
-                $.cookie(id + 'width', uiwidth);
-                $.cookie(id + 'font-p', $('#' + id + ' div p').css("font-size"));
-                $.cookie(id + 'font-h2', $('#' + id + ' div h2').css("font-size"));
-                $('.resizable-card p').fitText(0.4, { maxFontSize: '80px' });
-                $('.resizable-card h2').fitText(0.6, { maxFontSize: '70px' });
+        $('.sortable').sortable({
+            connectWith: ".sortable",
+            items: ".cardpanel",
+            placeholder: "placeholder",
+            forcePlaceholderSize: true,
+            cursor: "move",
+            opacity: 0.5,
+            handle: ".panel-heading",
+            update: function (event, ui) {
+                var saveOrd = $('.sortable').sortable('toArray');
+                $.cookie('sortOrder', saveOrd);
+                $.each(saveOrd, function (i, e) {
+                    $.cookie(e, $('#' + e).html());
+                });
             }
-
         });
 
+        //$('.cardpaneldiv').resizable({
+        //    ghost: true,
+        //    minWidth: 200,
+        //    minHeight: 255,
+        //    grid: [40, 40],
+        //    animate: true,
+        //    stop: function (event, ui) {
+        //        id = ui.element.attr('id')
+        //        var uiheight = $('#' + id).height();
+        //        var uiwidth = $('#' + id).width();
+        //        $.cookie(id + 'height', uiheight);
+        //        $.cookie(id + 'width', uiwidth);
+        //        $.cookie(id + 'font-p', $('#' + id + ' div p').css("font-size"));
+        //        $.cookie(id + 'font-h2', $('#' + id + ' div h2').css("font-size"));
+        //        $('.resizable-card p').fitText(0.4, { maxFontSize: '80px' });
+        //        $('.resizable-card h2').fitText(0.6, { maxFontSize: '70px' });
+        //    }
 
-
-
-
-       
-
-
+        //});
 
     </script>
