--- a/Automation/Views/Home/Index.cshtml
+++ b/Automation/Views/Home/Index.cshtml
@@ -22,15 +22,24 @@
     </div>
 </div>
 
-<div class="row col-centered" style="margin-top: 100px;">
-    <div class="btn-group" role="button" aria-label="NewWidget">
-        <button type="button" id="metricCard" class="btn btn-info">Metric Card</button>
-        <button type="button" id="splitMetricCard" class="btn btn-info">Split Metric Card</button>
-        <button type="button" id="barChart" class="btn btn-info">Bar Chart</button>
-    </div>
+<div class="row col-centered" style="margin-top: 100px; display: block">
+        <div class="btn-group" role="button" aria-label="NewWidget">
+            <button type="button" id="metricCard" class="btn btn-info">Metric Card</button>
+            <button type="button" id="splitMetricCard" class="btn btn-info">Split Metric Card</button>
+            <button type="button" id="barChart" class="btn btn-info">Bar Chart</button>
+            <button type="button" id="doughnutChart" class="btn btn-info">Doughnut Chart</button>
+        </div>
+
+
+        <div class="btn-group float-right" role="button" aria-label="NewWidget" style="float-right">
+            <button type="button" id="smallColumn" class="btn btn-info">Small Column</button>
+            <button type="button" id="mediumColumn" class="btn btn-info">Medium Column</button>
+            <button type="button" id="largeColumn" class="btn btn-info">Large Column</button>
+        </div>
+
     <div class="col-lg-12 col-md-12 col-sm-12 maxheight" style="display: table">
 
-        <div id="SCOMPartial" style="display: table">
+        <div id="SCOMPartial">
             Loading . . .
         </div>
 
@@ -72,9 +81,11 @@
             });
         });
 
+        //Buttons to add various metric cards
+
         $(document).on('click', '#metricCard', function () {
-            var column = $('#SCOMPartial').find('.sortable .row .cardpanel').length + 1
-            $('#SCOMPartial').find('.sortable .row:first').append($('<div id= "column_' + column + '" class="cardpaneldiv" >').load('/SCOM/CreateMetricCard?total=99&Title=Metric&Label=Total'));
+            var column = $('#SCOMPartial').find('.row .sortable .cardpanel').length + 1
+            $('#SCOMPartial').find('.sortable:first').append($('<div id= "column_' + column + '" class="cardpaneldiv" >').load('/SCOM/CreateMetricCard?total=99&Title=Metric&Label=Total'));
             $('.resizable-card').resizable({
                 ghost: true,
                 minWidth: 200,
@@ -83,7 +94,6 @@
                 animate: true,
                 stop: function (event, ui) {
                     id = ui.element.parent().attr('id');
-                    alert(id);
                     var uiheight = $('#' + id).height();
                     var uiwidth = $('#' + id).width();
                     $.cookie(id + 'height', uiheight);
@@ -97,12 +107,12 @@
         });
 
         $(document).on('click', '#barChart', function () {
-            var column = $('#SCOMPartial').find('.sortable .row .cardpanel').length + 1
-            $('#SCOMPartial').find('.sortable .row:first').append($('<div id="column_' + column + '" class="cardpanel" style="width: auto !important">').load('/AD/ADServiceHealth'));
+            var column = $('#SCOMPartial').find('.row .sortable .cardpanel').length + 1
+            $('#SCOMPartial').find('.sortable:first').append($('<div id="column_' + column + '" class="cardpaneldiv" style="width: auto !important">').load('/AD/ADServiceHealth'));
             $('#column_' + column).resizable({
                 ghost: true,
-                minWidth: 200,
-                minHeight: 255,
+                //minWidth: 200,
+                //minHeight: 400,
                 grid: [40, 40],
                 animate: true,
                 stop: function (event, ui) {
@@ -120,14 +130,37 @@
             });
         });
 
+        $(document).on('click', '#doughnutChart', function () {
+            var column = $('#SCOMPartial').find('.row .sortable .cardpanel').length + 1
+            $('#SCOMPartial').find('.sortable:first').append($('<div id="column_' + column + '" class="cardpaneldiv">').load('/SCOM/CreateDoughnutGraph?Title=Doughnut&Good=10&Bad=3&div=' + column + 'chart'));
+            $('#column_' + column).resizable({
+                ghost: true,
+                //minWidth: 200,
+                //minHeight: 400,
+                grid: [40, 40],
+                animate: true,
+                stop: function (event, ui) {
+                    id = ui.element.attr('id')
+                    var uiheight = $('#' + id).height();
+                    var uiwidth = $('#' + id).width();
+                    $.cookie(id + 'height', uiheight);
+                    $.cookie(id + 'width', uiwidth);
+                    $.cookie(id + 'font-p', $('#' + id + ' div p').css("font-size"));
+                    $.cookie(id + 'font-h2', $('#' + id + ' div h2').css("font-size"));
+                    $('.resizable-card p').fitText(0.4, { maxFontSize: '80px' });
+                    $('.resizable-card h2').fitText(0.6, { maxFontSize: '70px' });
+                }
 
+            });
+        });
+                
         $(document).on('click', '#splitMetricCard', function () {
-            var column = $('#SCOMPartial').find('.sortable .row .cardpanel').length + 1
-            $('#SCOMPartial').find('.sortable .row:first').append($('<div id= "column_' + column + '" class="cardpanel">').load('/SCOM/CreateSplitMetricCard?total=200&Title=Split%20Metric&Label=Total&Warning=150&Error=50'));
+            var column = $('#SCOMPartial').find('.row .sortable .cardpanel').length + 1
+            $('#SCOMPartial').find('.sortable:first').append($('<div id= "column_' + column + '" class="cardpaneldiv">').load('/SCOM/CreateSplitMetricCard?total=200&Title=Split%20Metric&Label=Total&Warning=150&Error=50'));
             $('#column_' + column).resizable({
                 ghost: true,
                 minWidth: 200,
-                minHeight: 255,
+                minHeight: 270,
                 grid: [40, 40],
                 animate: true,
                 stop: function (event, ui) {
@@ -146,7 +179,74 @@
 
         });
 
-        
+        //Buttons to add columns of various sizes
+
+        $(document).on("click", '#smallColumn', function (a) {
+            var sortcolumn = $('#SCOMPartial').find('.row .sortColumn .column').length + 1
+            $('#SCOMPartial').find('.sortColumn').append($('<div id= "sortColumn_' + sortcolumn + '" class="column sortable col-md-2">').load('/SCOM/CreateColumn'));
+
+            $('.sortable').sortable({
+                connectWith: ".sortable",
+                items: ".cardpanel",
+                placeholder: "placeholder",
+                forcePlaceholderSize: true,
+                cursor: "move",
+                opacity: 0.5,
+                handle: ".panel-heading",
+                update: function (event, ui) {
+                    var saveOrd = $('.sortable').sortable('toArray');
+                    $.cookie('sortOrder', saveOrd);
+                    $.each(saveOrd, function (i, e) {
+                        $.cookie(e, $('#' + e).html());
+                    });
+                }
+            });
+        });
+
+        $(document).on("click", '#mediumColumn', function (a) {
+            var sortcolumn = $('#SCOMPartial').find('.row .sortColumn .column').length + 1
+            $('#SCOMPartial').find('.sortColumn').append($('<div id= "sortColumn_' + sortcolumn + '" class="column sortable col-md-3">').load('/SCOM/CreateColumn'));
+
+            $('.sortable').sortable({
+                connectWith: ".sortable",
+                items: ".cardpanel",
+                placeholder: "placeholder",
+                forcePlaceholderSize: true,
+                cursor: "move",
+                opacity: 0.5,
+                handle: ".panel-heading",
+                update: function (event, ui) {
+                    var saveOrd = $('.sortable').sortable('toArray');
+                    $.cookie('sortOrder', saveOrd);
+                    $.each(saveOrd, function (i, e) {
+                        $.cookie(e, $('#' + e).html());
+                    });
+                }
+            });
+        });
+
+        $(document).on("click", '#largeColumn', function (a) {
+            var sortcolumn = $('#SCOMPartial').find('.row .sortColumn .column').length + 1
+            $('#SCOMPartial').find('.sortColumn').append($('<div id= "sortColumn_' + sortcolumn + '" class="column sortable col-md-6">').load('/SCOM/CreateColumn'));
+
+            $('.sortable').sortable({
+                connectWith: ".sortable",
+                items: ".cardpanel",
+                placeholder: "placeholder",
+                forcePlaceholderSize: true,
+                cursor: "move",
+                opacity: 0.5,
+                handle: ".panel-heading",
+                update: function (event, ui) {
+                    var saveOrd = $('.sortable').sortable('toArray');
+                    $.cookie('sortOrder', saveOrd);
+                    $.each(saveOrd, function (i, e) {
+                        $.cookie(e, $('#' + e).html());
+                    });
+                }
+            });
+        });
+
 
 
 
