--- a/Automation/Views/Shared/_ADServiceHealth.cshtml
+++ b/Automation/Views/Shared/_ADServiceHealth.cshtml
@@ -2,7 +2,7 @@
 
 @model IEnumerable<Automation.ViewModels.ADServiceHealthViewModel>
 
-<div class="bargraph panel-inverse clearfix resizable-bar ui-sortable">
+<div class="cardpanel bargraph panel-inverse clearfix resizable-bar ui-sortable">
     <div class="panel-heading">
         <div class="panel-heading-btn">
             <a href="#" class="btn btn-xs btn-icon btn-warning" data-click="panel-collapse" title="Collapse Panel"><i class="fas fa-minus"></i></a>
@@ -104,8 +104,8 @@
         $(this).resizable({
             alsoResize: $(this).find('canvas'),
             ghost: true,
-            minWidth: 600,
-            minHeight: 400,
+            //minWidth: 600,
+            //minHeight: 400,
             grid: [40, 40],
             animate: true
         });
