--- a/Automation/Views/Shared/_GPChart.cshtml
+++ b/Automation/Views/Shared/_GPChart.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Text
 @model Automation.ViewModels.GPOViewModel
 
-<div class="col ui-sortable widgets" style="min-width: 250px; min-height: 400px;">
+<div class="cardpanel doughnutgraph ui-sortable widgets" style="min-width: 250px; min-height: 400px;">
     <div class="row">
         <div class="cardpanel pieChart panel-inverse">
             <div class="panel-heading">
@@ -17,14 +17,6 @@
     </div>
 </div>
 <script type="text/javascript">
-    //$(".widgets").sortable({
-    //    handle: ".panel-heading",
-    //    connectWith: ".sortable",
-    //    placeholder: "placeholder",
-    //    items: ".cardpanel",
-    //    cursor: "move",
-    //    opacity: 0.5,
-    //});
 
     var dynamicColours = function () {
         var r = Math.floor(Math.random() * 255);
