--- a/Automation/Views/Shared/_SCOM.cshtml
+++ b/Automation/Views/Shared/_SCOM.cshtml
@@ -1,47 +1,49 @@
 ﻿@model IEnumerable<Automation.Models.SCOM>
+<div class="row sortColumn">
+    <div id="sortColumn_1" class="col-md-3 sortable column">
+        <div class="clearfix column-heading">
+            <a href='#' class='btn btn-icon btn-warning' data-click='column-remove' title='Remove Column' style="float: right; font-size: 0.25em; text-align: center"><i class='fas fa-minus'></i></a>
+            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Collapse Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
+        </div>
+    </div>
+    <div id="sortColumn_2" class="col-md-6 sortable column">
+        <div class="clearfix column-heading">
+            <a href='#' class='btn btn-xs btn-icon btn-warning' data-click='column-remove' title='Remove Column' style="float: right; font-size: 0.25em;"><i class='fas fa-minus'></i></a>
+            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Collapse Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
+        </div>
+    </div>
+    <div id="sortColumn_3" class="col-md-3 sortable column">
+        <div class="clearfix column-heading">
+            <a href='#' class='btn btn-xs btn-icon btn-warning' data-click='column-remove' title='Remove Column' style="float: right; font-size: 0.25em;"><i class='fas fa-minus'></i></a>
+            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Collapse Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
+        </div>
 
-<div class="sortable" id="sortable" >
-    <div class="row">
     </div>
 </div>
 
-    <script type="text/javascript">
 
-        $('.sortable').sortable({
-            connectWith: ".sortable",
-            items: ".cardpanel",
-            placeholder: "placeholder",
-            forcePlaceholderSize: true,
-            cursor: "move",
-            opacity: 0.5,
-            handle: ".panel-heading",
-            update: function (event, ui) {
-                var saveOrd = $('.sortable').sortable('toArray');
-                $.cookie('sortOrder', saveOrd);
-                $.each(saveOrd, function (i, e) {
-                    $.cookie(e, $('#' + e).html());
-                });
-            }
-        });
+<script type="text/javascript">
+    $('.sortColumn').sortable({
+        items: ".column",
+        placeholder: "placeholder",
+        forcePlaceholderSize: true
+    });
 
-        //$('.cardpaneldiv').resizable({
-        //    ghost: true,
-        //    minWidth: 200,
-        //    minHeight: 255,
-        //    grid: [40, 40],
-        //    animate: true,
-        //    stop: function (event, ui) {
-        //        id = ui.element.attr('id')
-        //        var uiheight = $('#' + id).height();
-        //        var uiwidth = $('#' + id).width();
-        //        $.cookie(id + 'height', uiheight);
-        //        $.cookie(id + 'width', uiwidth);
-        //        $.cookie(id + 'font-p', $('#' + id + ' div p').css("font-size"));
-        //        $.cookie(id + 'font-h2', $('#' + id + ' div h2').css("font-size"));
-        //        $('.resizable-card p').fitText(0.4, { maxFontSize: '80px' });
-        //        $('.resizable-card h2').fitText(0.6, { maxFontSize: '70px' });
-        //    }
+    $('.sortable').sortable({
+        connectWith: ".sortable",
+        items: ".cardpanel",
+        placeholder: "placeholder",
+        forcePlaceholderSize: true,
+        cursor: "move",
+        opacity: 0.5,
+        handle: ".panel-heading",
+        update: function (event, ui) {
+            var saveOrd = $('.sortable').sortable('toArray');
+            $.cookie('sortOrder', saveOrd);
+            $.each(saveOrd, function (i, e) {
+                $.cookie(e, $('#' + e).html());
+            });
+        }
+    });
 
-        //});
-
-    </script>
+</script>
