--- a/Automation/Views/Shared/_SCOM.cshtml
+++ b/Automation/Views/Shared/_SCOM.cshtml
@@ -2,20 +2,17 @@
 <div class="row sortColumn">
     <div id="sortColumn_1" class="col-md-3 sortable column">
         <div class="clearfix column-heading">
-            <a href='#' class='btn btn-icon btn-warning' data-click='column-remove' title='Remove Column' style="float: right; font-size: 0.25em; text-align: center"><i class='fas fa-minus'></i></a>
-            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Collapse Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
+            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Remove Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
         </div>
     </div>
     <div id="sortColumn_2" class="col-md-6 sortable column">
         <div class="clearfix column-heading">
-            <a href='#' class='btn btn-xs btn-icon btn-warning' data-click='column-remove' title='Remove Column' style="float: right; font-size: 0.25em;"><i class='fas fa-minus'></i></a>
-            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Collapse Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
+            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Remove Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
         </div>
     </div>
     <div id="sortColumn_3" class="col-md-3 sortable column">
         <div class="clearfix column-heading">
-            <a href='#' class='btn btn-xs btn-icon btn-warning' data-click='column-remove' title='Remove Column' style="float: right; font-size: 0.25em;"><i class='fas fa-minus'></i></a>
-            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Collapse Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
+            <a href='#' class='btn btn-xs btn-icon btn-danger' data-click='column-remove' title='Remove Column' style='float: right; font-size: 0.25em'><i class='fa fa-times'></i></a>
         </div>
 
     </div>
