--- a/Automation/Content/Site.css
+++ b/Automation/Content/Site.css
@@ -27,7 +27,7 @@ textarea {
  /* Clear fix to resolve div issues */
  .clearfix:after {
      content: "";
-     display: table;
+     /*display: table;*/
      clear: both;
  }
 
@@ -41,7 +41,7 @@ textarea {
     border: 1px dotted black;
     visibility: visible !important;
     width: auto;
-    height: 800px;
+    height: auto;
     padding: 0px;
 }
 
@@ -159,15 +159,16 @@ textarea {
 
 .cardpanel {
     border: none;
-    margin: 5px;
+    margin: 0px;
     -webkit-box-shadow: none;
     box-shadow: none;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
     background-color: lightgrey;
-    height: auto;
+    height: 350px;
     width: auto;
+    max-height: 350px;
    
 }
 
@@ -189,13 +190,13 @@ textarea {
 }
 
 .panel-heading {
-    padding: 10px 15px;
+    padding: 0px;
     border: none;
-    height: 70px;
+    height: 40px;
 }
 
 .column-heading {
-    padding: 10px 15px;
+    padding: 0px;
     border: none;
     height: 40px;
     background-color: dimgrey;
@@ -210,19 +211,19 @@ textarea {
 }
 
 .panel-heading-btn > a {
-        margin-left: 8px
+        margin-left: 0px
     }
 
 .panel-heading .btn-group .btn {
-    margin-top: -7px
+    margin-top: 0px
 }
 
 .panel-heading .btn-group .btn.btn-sm {
-    margin-top: -5px
+    margin-top: 0px
 }
 
 .panel-heading .btn-group .btn.btn-xs {
-    margin-top: -1px
+    margin-top: 0px
 }
 
 .panel-heading .label.pull-left, .panel-heading .label.pull-right {
@@ -254,23 +255,10 @@ textarea {
     background: #fff
 }
 
-.panel-heading .nav-tabs {
-    margin-top: -10px;
-    margin-right: -15px
-}
 
-.panel-heading .nav-tabs > li > a {
-    padding: 10px 15px;
-    line-height: 20px
-}
 
 .panel-title {
     font-size: 12px
-}
-
-.panel-title .accordion-toggle {
-    margin: -10px -15px;
-    padding: 10px 15px
 }
 
 .panel-title .accordion-toggle.accordion-toggle-styled .fa:before {
@@ -303,9 +291,18 @@ textarea {
 }
 
 .panel-body {
-    padding: 15px;
+    padding: 0px;
     background-color: lightgrey;
-    height: 75%;
+    max-height: 300px;
+}
+
+p.panel-body-title {
+    align-content: center;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    vertical-align: middle;
+    margin: 0px
 }
 
 .panel-body.no-border {
@@ -327,6 +324,11 @@ textarea {
 
 .panel-body.with-table > .table tr:last-child td, .panel-body.with-table > .table tr:last-child th {
     border-bottom: 0
+}
+
+.panel-body .cardvalue > h2 {
+    padding: 0px;
+    margin: 0px;
 }
 
 .panel .tab-content {
@@ -384,7 +386,11 @@ textarea {
 
 @media screen and (max-width: 757px) {
     div.cardvalue > p.cardprimary-value {
-        font-size: 7em
+        font-size: 7em;
+    }
+
+    p.panel-body-title {
+        font-size: 3em;
     }
     div > span.fa-3x {
         font-size: 8em;
@@ -393,28 +399,25 @@ textarea {
 
 @media screen and (min-width: 1000px) {
     div.cardvalue>p.cardprimary-value {
-        font-size: 5em
+        font-size: 3em
     }
-    div > span.fa-3x {
-        font-size: 4em;
-    }
-}
-
-/*@media screen and (max-width: 1157px) {
-    div.cardvalue > p.cardprimary-value {
-        font-size: 5em
+    p.panel-body-title {
+        font-size: 1em;
     }
     div > span.fa-3x {
         font-size: 3em;
     }
-}*/
+}
 
 @media screen and (min-width: 1158px) {
     div.cardvalue > p.cardprimary-value {
-        font-size: 6em
+        font-size: 5em;
+    }
+    p.panel-body-title {
+        font-size: 1.5em;
     }
     div>span.fa-3x {
-        font-size: 5em;
+        font-size: 4em;
     }
 }
 
